Readme + changed SAT2 to support java 11